[workspace]
resolver = "2"
members = [
    "crates/vistrit-protocol",
    "crates/vistrit-core",
    "crates/vistrit-coordinator",
    "crates/vistrit-worker",
    "crates/vistrit-client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Vistrit Contributors"]
license = "MIT"
repository = "https://github.com/vistrit/vistrit"
description = "An educational distributed computing platform in Rust"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
bytes = "1.5"
crc32fast = "1.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Internal crates
vistrit-protocol = { path = "crates/vistrit-protocol" }
vistrit-core = { path = "crates/vistrit-core" }
